--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,14 +2,14 @@
   .side-bar__header
     .side-bar__header__box
       .side-bar__header__box__username
-        aaaaa
+        = current_user.name
       .side-bar__header__box__menu
         .side-bar__header__box__menu__left
           = link_to "#", class:"icon1" do
             = icon('fas', 'edit')
         .side-bar__header__box__menu__right
-          = link_to "#",class:"icon2" do
-            = icon('fas', 'cog')
+          = link_to edit_user_path(current_user) do
+            = icon('fas', 'cog', class: 'icon2')
   .side-bar__contents
     .side-bar__contents__box
       .side-bar__contents__box__title
