--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -31,13 +31,13 @@
         }
         &__menu {
           display: flex;
-           .icon1 {
-             margin-right: 5px;
+           .icon {
+             margin-left: 5px;
              color: #ffffff;
            }
-           .icon2 {
-             color: #ffffff;
-           }
+          //  .icon2 {
+          //    color: #ffffff;
+          //  }
         }
      }
    }
@@ -49,7 +49,7 @@
      &__box {
        color: white;
        text-decoration: none;
-       margin-bottom: 40px;
+      //  margin-bottom: 40px;
        height: 100px;
        width: 100%;  
        &__title {
