--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -13,9 +13,8 @@
   .side-bar__contents
     - current_user.groups.each do |group|
       .side-bar__contents__box
-        .side-bar__contents__box__title
-          = link_to "#", class:"text" do
-            = group.name
-        .side-bar__contents__box__message
-          = link_to "#", class:"text" do
-            まだメッセージがありません。
+        = link_to group_messages_path(group) do
+          .side-bar__contents__box__title
+          = group.name
+          .side-bar__contents__box__message
+          = group.show_last_message
