--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -31,13 +31,14 @@
         }
         &__menu {
           display: flex;
+          a{
+            color: #ffffff;
+          }
            .icon {
              margin-left: 5px;
              color: #ffffff;
+             text-decoration: none;
            }
-          //  .icon2 {
-          //    color: #ffffff;
-          //  }
         }
      }
    }
@@ -49,20 +50,18 @@
      &__box {
        color: white;
        text-decoration: none;
-      //  margin-bottom: 40px;
-       height: 100px;
+       margin-bottom: 40px;
        width: 100%;  
        &__title {
         font-size: 15px;
+        color: white;
        }
        &__message {
         font-size: 11px;
         margin-top: 5px;
+        color: white;
        }
-       .text {
-         text-decoration: none;
-         color: #ffffff;
-       }
+       
      }
    }
   }
@@ -113,12 +112,12 @@
       width: 100%;
       padding: 46px 40px;
       overflow: scroll;
-      &__message {
+      .message {
         padding-bottom: 40px;
-        &__info {
+        .upper-message {
           display: flex;
           margin-bottom: 10px;
-          &__talker {
+          &__user-name {
             color: #434a54;
             font-size: 16px;
             font-weight: bold;
@@ -129,7 +128,7 @@
             margin-left: 10px;
           }
         }
-        &__text {
+        .lower-message__content {
           color: #434a54;
           font-size: 14px;
           margin-bottom: 10px;
@@ -144,39 +143,45 @@
     padding: 20px 40px;
     box-sizing: border-box;
     &__message {
-      display: flex;
+      border: none;
+      float: left;
+      height: 50px;
+      width: calc(100% - 150px);
+      padding-left: 10px;
       &__input-box {
-        display: flex;
-        width: 100%;
-        &__text {
-          height: 50px;
-          width: 100%;
-          padding: 0 40px 0 10px;
-          color: #434a54;
-          border-style: none;
-        }
-        &__image {
-          position: absolute;
-          bottom: 30px;
-          right: 170px;
+        background-color: $white;
+        float: left;
+        height: 50px;
+        padding-right: 10px;
+        position: relative;
+        .footer__message__input-box__image {
+          bottom: 10px;
+          right: 10px;
           cursor: pointer;
           font-size: 1.3rem;
-        }
-      
-        &__image__file {
-          display: none;
-        }
+          padding-top: 10px;
+          position: absolute;
+        }  
       }
-
+    }
       .submit-btn {
-        width: 100px;
+        background-color: $light_blue;
+        border: none;
+        color: $white;
+        font-size: 16px;
         height: 50px;
-        padding: 0 30px;
         margin-left: 15px;
-        background-color: #38aef0;
-        color: white;
-        cursor: pointer;
+        padding: 0 30px;
+        bottom: 50px;
       }
     }
   }
+.text {
+  text-decoration: none;
+}
+.hidden {
+  display: none;
+}
+.icon{
+
 }
