--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -6,7 +6,7 @@
       .side-bar__header__box__menu
         .side-bar__header__box__menu__left
           = link_to new_group_path do
-            = icon('fas', 'edit')
+            = icon('fas', 'edit', class: 'icon')
         .side-bar__header__box__menu__right
           = link_to edit_user_path(current_user) do
             = icon('fas', 'cog', class: 'icon')
