--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -13,8 +13,8 @@
   .side-bar__contents
     - current_user.groups.each do |group|
       .side-bar__contents__box
-        = link_to group_messages_path(group) do
+        = link_to group_messages_path(group),class:'text' do
           .side-bar__contents__box__title
-          = group.name
+            = group.name
           .side-bar__contents__box__message
-          = group.show_last_message
+            = group.show_last_message
